# enum_to_str_derive

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.MD  pre-commit  rustfmt.toml
src/: lib.rs  utils.rs
tests/: basic.rs
