[package]
name = "enum_to_str_derive"
version = "0.1.0"
authors = ["DCjanus <1102035688@qq.com>"]
description = "provide a simple way to convert enum to static str ref"
repository = "https://github.com/DCjanus/enum_to_str_derive"
documentation = "https://docs.rs/enum_to_str_derive"
license = "BSD-3-Clause"
readme = "README.MD"
exclude = [
    ".gitignore",
    "pre-commit",
    "README.MD",
    "rustfmt.toml",
    "tests/*",
    ".travis.yml",
]

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[lib]
proc-macro = true
