[package]
name = "enum_to_str_derive"
version = "0.3.0"
authors = ["DCjanus <1102035688@qq.com>"]
description = "provide a simple way to convert enum to static str ref"
repository = "https://github.com/DCjanus/enum_to_str_derive"
documentation = "https://docs.rs/enum_to_str_derive"
license = "BSD-3-Clause"
exclude = [
    ".gitignore",
    "pre-commit",
    "README.MD",
    "rustfmt.toml",
    "tests/*",
    ".travis.yml",
    "CHANGELOG.md",
]

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc_macro_helper = "0.3"

[lib]
proc-macro = true
